Add --warn-drop-version option; by default, do not warn when discarding version info.

gold/
	PR gold/23455
	* options.h (General_options): Add --warn-drop-version option.
	* symtab.cc (Symbol_table::set_dynsym_indexes): Check it.